# segment-any-text

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: split-file.rs  test.txt
src/: config.rs  constants.rs  lib.rs
src/inference/: inference_impl.rs  mod.rs  sat.rs  utils.rs
src/model/: mod.rs
